fix: x overflow

--- a/ch-client/src/style/index.css
+++ b/ch-client/src/style/index.css
@@ -402,6 +402,30 @@ button.new.active { display: block; }
     100% { width: 0; }
 }
 
+@media only screen and (max-width: 500px) {
+    header {
+	padding-top: 16px;
+    }
+
+    header h3,
+    header h1 {
+	display: none;
+    }
+
+    main h3 { display: none; }
+
+    header nav {
+	display: block;
+	position: relative;
+	top: 0; left: 0;
+	margin: 0 auto;
+    }
+
+    .nav-header h4 {
+	color: #aaa;
+    }
+}
+
 @media only screen and (max-width: 960px) {
     form.modal {
         position: fixed;
